:lipstick: Fix community solution summary background in dark mode

--- a/app/css/pages/community-solution-show.css
+++ b/app/css/pages/community-solution-show.css
@@ -115,6 +115,7 @@
                     & .c-iteration-summary {
                         @apply py-8 px-24;
                         @apply border-b-1 border-borderColor7;
+                        @apply bg-backgroundColorA;
                     }
                 }
             }
